--- a/scheduler-locking/server/package.json
+++ b/scheduler-locking/server/package.json
@@ -23,6 +23,10 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/schedule": "^3.0.3",
+    "ioredis": "^5.3.2",
+    "redis": "^4.6.9",
+    "redlock": "5.0.0-beta.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
