--- a/scheduler-locking/server/package.json
+++ b/scheduler-locking/server/package.json
@@ -20,10 +20,12 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/bull": "^10.0.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/schedule": "^3.0.3",
+    "bull": "^4.11.3",
     "ioredis": "^5.3.2",
     "redis": "^4.6.9",
     "redlock": "5.0.0-beta.2",
